--- a/index.html
+++ b/index.html
@@ -4,29 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Очень плохой сайт</title>
-    <a href="C:\Users\User\Desktop\Сайт_1\resume.html">
-        <img src = "C:\Users\User\Desktop\Сайт_1\pages\images.png" alt = "Alternate">
-    </a>
+    <title>Document</title>
 </head>
 <body>
-    <h1>
-        Мудрая мысль
-    </h1>
-    <p>
-        Важные слова
-        <br />
-        Какие - то слова Еще слова Много слов Мы буквы, с нами текст Какие - то слова Еще слова Много слов Мы буквы, с нами текст
-        Какие - то слова Еще слова Много слов Мы буквы, с нами текст Какие - то слова Еще слова Много слов Мы буквы, с нами текст
-        Какие - то слова Еще слова Много слов Мы буквы, с нами текст Какие - то слова Еще слова Много слов Мы буквы, с нами текст
-        Какие - то слова Еще слова Много слов Мы буквы, с нами текст Какие - то слова Еще слова Много слов Мы буквы, с нами текст
-        Какие - то слова Еще слова Много слов Мы буквы, с нами текст Какие - то слова Еще слова Много слов Мы буквы, с нами текст
-    </p>
-    <ol>
-        <li><a href="C:\Users\User\Desktop\Сайт_1\info.html">Информация</a></li>
-        <li><a href="C:\Users\User\Desktop\Сайт_1\portfolio.html">Портфолио</a></li>
-        <li><a href="C:\Users\User\Desktop\Сайт_1\resume.html">Резюме</a></li>
-    </ol>
-    
+    <section>
+        <img src="image\img1.jpg" alt = "Alternate">
+        <h1>Кулак Алёна</h1>
+        <p>Университет Дубна группа 2255</p>
+    </section>
+    <section>
+        <div>
+            
+        </div>
+        <h2>Что я умею</h2>
+        <div>
+            <img src = "image\ceeplusplus.jpg" alt = "Alternate">
+            <h3>
+                Программиовать на С++
+            </h3>
+        </div>
+        <div>
+            <img src = "image\Dihanchik.jpg" alt = "Alternate">
+            <h3>
+                Дышать
+            </h3>
+        </div>
+        <div>
+            <img src = "image\Pygame_logo.png" alt = "Alternate">
+            <h3>
+                Пользоваться pygame
+            </h3>
+        </div>
+    </section>
+        <h3>Мои сильные стороны</h3>
+        <ul>
+            <li>Трудолюбие</li>
+            <li>Неболтливость</li>
+            <li>Целеустремленность</li>
+        </ul>
+        <h3>Мои жизненные цели</h3>
+        <ol>
+            <li>Получить профессию</li>
+            <li>Выспаться</li>
+            <li>Выспаться в будний день</li>
+        </ol>
+    <section>
+        <button onclick="alert('И зачем было нажимать?')">НЕ НАЖИМАТЬ</button>
+    </section>
 </body>
 </html>
