--- a/index.html
+++ b/index.html
@@ -8,29 +8,46 @@
 </head>
 <body>
     <section>
-        <img src="image\img1.jpg" alt = "Alternate">
+        <img src="images\студент.jpg"
+        width="300"
+        height="600" 
+        alt = "Alternate">
         <h1>Кулак Алёна</h1>
         <p>Университет Дубна группа 2255</p>
     </section>
     <section>
         <div>
-            
+            <ul>
+                <li><a href="#c++">Программиовать на С++</a></li>
+                <li><a href="#дышать">Дышать</a></li>
+                <li><a href="#дышать">Пользоваться pygame</a></li>
+            </ul>
         </div>
         <h2>Что я умею</h2>
         <div>
-            <img src = "image\ceeplusplus.jpg" alt = "Alternate">
+            <a name = "c++"></a>
+            <img src = "images\cpp_profi_icon.png" 
+            width="300"
+            height="300"
+            alt = "Alternate">
             <h3>
                 Программиовать на С++
             </h3>
         </div>
         <div>
-            <img src = "image\Dihanchik.jpg" alt = "Alternate">
+            <a name = "дышать"></a>
+            <img src = "images\дышать.jpg" alt = "Alternate">
+
             <h3>
                 Дышать
             </h3>
         </div>
         <div>
-            <img src = "image\Pygame_logo.png" alt = "Alternate">
+            <a name = "pygame"></a>
+            <img src = "images\пайгейм.png" 
+            width="600"
+            height="300"
+            alt = "Alternate">
             <h3>
                 Пользоваться pygame
             </h3>
